--- a/app/components/CredentialsBar.module.css
+++ b/app/components/CredentialsBar.module.css
@@ -81,8 +81,4 @@
   }
 }
 
-@media (max-width: 30rem) {
-  .grid {
-    grid-template-columns: 1fr;
-  }
-}
+
